[tool.poetry]
name = "mp-assignment-03"
version = "0.1.0"
description = ""
authors = ["You Guang <yokurang@gmail.com>"]
readme = "README.md"
packages = [{include = "mp_assignment_03"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
